syntax = "proto3";

package api.key;

message Key {
  enum KeyModifier {
    CTRL = 0;
    ALT = 1;
    SHIFT = 2;
    SUPER = 3;
  }

  enum NamedKey {
    PageDown = 0;
    PageUp = 1;
    LeftArrow = 2;
    DownArrow = 3;
    UpArrow = 4;
    RightArrow = 5;
    Home = 6;
    End = 7;
    Backspace = 8;
    Delete = 9;
    Insert = 10;
    F1 = 11;
    F2 = 12;
    F3 = 13;
    F4 = 14;
    F5 = 15;
    F6 = 16;
    F7 = 17;
    F8 = 18;
    F9 = 19;
    F10 = 20;
    F11 = 21;
    F12 = 22;
    Tab = 23;
    Esc = 24;
    CapsLock = 25;
    ScrollLock = 26;
    NumLock = 27;
    PrintScreen = 28;
    Pause = 29;
    Menu = 30;
    Enter = 31;
  }

  optional KeyModifier modifier = 1;
  oneof main_key {
    NamedKey key = 2;
    uint32 char = 3;
  }
  repeated KeyModifier additional_modifiers = 4;
}
